Successful build post ai add v3 api keys